# vesta

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql.yml  docs.yml
docs/: conf.py  index.rst  requirements.txt
examples/: README.md  dadjokes.py  repl.py
src/vesta/: __init__.py  chars.py  clients.py  http.py  vbml.py
tests/: requirements.txt  test_chars.py  test_client.py  test_clients.py  test_http.py  test_vbml.py
vesta/: __init__.py  chars.py  client.py  clients.py
