[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vesta"
dynamic = ["version"]
description = "Vestaboard client library"
authors = [
    {name = "Jon Parise", email = "jon@indelible.org"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["vestaboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.9"
dependencies = [
    "httpx>=0.23.1",
]

[dependency-groups]
docs = [
    "Sphinx==8.2.0",
    "furo==2025.9.25",
    "sphinx_mdinclude==0.6.0",
]
dev = [
    "mypy==1.18.1",
    "pytest==8.4.0",
    "pytest-cov==7.0.0",
    "respx==0.22.0",
    "ruff==0.14.0",
]

[project.urls]
Homepage = "https://github.com/jparise/vesta"
Documentation = "https://vesta-py.readthedocs.io/"
Repository = "https://github.com/jparise/vesta.git"
Issues = "https://github.com/jparise/vesta/issues"
Changelog = "https://github.com/jparise/vesta/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "vesta.__version__"}

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
packages = ["vesta", "tests"]
python_version = 3.9

[tool.pytest.ini_options]
addopts = "--cov=vesta --cov-report=term-missing --doctest-modules"

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "RUF", "W"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/test_chars.py" = ["E501"]
