[metadata]
name = vesta
version = attr: vesta.__version__
author = Jon Parise
author_email = jon@indelible.org
description = Vestaboard client library
long_description = file: README.md, LICENSE
license = MIT
url = https://github.com/jparise/vesta
keywords = vestaboard
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >= 3.6
zip_safe = True

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    vesta
    tests

[flake8]
max-line-length: 88
exclude = .venv/*,docs/*
extend-ignore: E203
