[metadata]
name = vesta
version = attr: vesta.__version__
author = Jon Parise
author_email = jon@indelible.org
description = Vestaboard client library
long_description = file: README.md, LICENSE, CHANGELOG.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
url = https://github.com/jparise/vesta
project_urls =
    Documentation = https://vesta-py.readthedocs.io/
    Source Code = https://github.com/jparise/vesta
    Issue Tracker = https://github.com/jparise/vesta/issues
keywords = vestaboard
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >= 3.7
zip_safe = True

[tool:pytest]
addopts = --doctest-modules
testpaths = vesta tests

[coverage:run]
branch = True
source =
    vesta
    tests

[flake8]
max-line-length: 88
exclude = .venv/*,docs/*
extend-ignore: E203
per-file-ignores =
    # ignore line lengths in encoding tests
    tests/test_chars.py: E501
